# voyadecir-meta

./: .gitignore  .gitmodules  AGENTS.md  CODEX_WORKSPACE_README.txt  OCR_DEBUG.md  README.md
ai-translator_mirror/: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  metrics.json  package-lock.json  package.json  pyproject.toml  requirements.txt
ai-translator_mirror/.github/workflows/: ci.yml
ai-translator_mirror/config/: config.js
ai-translator_mirror/data/Input/: Test.txt
ai-translator_mirror/data/output/output/: sample.txt
ai-translator_mirror/data/temp/cache/: sample_p1_orig.txt
ai-translator_mirror/scripts/: run.ps1  setup.ps1  test,ps1
ai-translator_mirror/src/node/: extract-pdfs.js  fileHandler.js  index.js
ai-translator_mirror/src/python/: metrics.json
ai-translator_mirror/src/python/ai_translator/: api.py  config.py  mailbills_agent.py  main.py  pdf_utils.py
ai-translator_mirror/src/python/ai_translator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai-translator_mirror/src/python/ai_translator/ocr/: __init__.py  azure_read.py  engine.py  pipeline.py  tesseract_fallback.py  types.py
ai-translator_mirror/src/python/ai_translator/pdf/: convert.py
ai-translator_mirror/src/python/ai_translator/translate/: client.py
ai-translator_mirror/tests/: conftest.py
ai-translator_mirror/tests/e2e/: test_end_to_end.py
ai-translator_mirror/tests/integration/: test_pdf_convert.py
ai-translator_mirror/tests/unit/: test_cache.py  test_circuit.py  test_health.py  test_ocr_azure.py
(+27 files in other folders)
