[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-translator"
version = "0.1.0"
description = "AI-powered PDF and text translator with OCR and FastAPI interface."
authors = [
  { name = "Voyadecir", email = "admin@voyadecir.com" }
]
readme = "README.md"
requires-python = ">=3.11"

# ---- Runtime Dependencies ----
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "python-dotenv",
  "requests",
  "pillow",
  "python-multipart",
  "rich",
  "tenacity",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["src/python"]
include = ["ai_translator*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
fix = true
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501", "B904"]

[tool.pytest.ini_options]
addopts = "--disable-warnings"
testpaths = ["tests"]
